docs(notes): M1 JVM 第1章 运行时数据区